# yandex-practicum-telegram-bot

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
src/: config.py  logger.py  main.py  text.py
src/config/: config.py  constants.py  logger.py
src/handlers/: handlers.py
src/keyboards/: keyboards.py
src/utils/: commands.py  levenshtein.py  utils.py
