[tool.poetry]
name = "yandex-practicum-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Pavel Korsakov <PKorsakov@datafort.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0.0b8"
pydantic-settings = "^2.0.2"


[tool.poetry.group.test.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
